--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <script>
     var update = function () {
       var simoneDays = {1: 'Edu', 4: 'Art', 7: 'Edu', 9: 'Art'};
-      var isaacDays = {1: 'Anglais', 2: 'Edu', 3: 'Edu', 4: 'Art', 5: 'Ang', 6: 'Ang', 8: 'Art', 9: 'Edu', 10: 'Edu'};
+      var isaacDays = {1: 'Anglais', 2: 'Edu', 3: 'Edu', 4: 'Art', 5: 'Anglais', 6: 'Anglais', 8: 'Art', 9: 'Edu', 10: 'Edu'};
       var offDays = [
         new Date(2021, 8, 6, 0, 0, 0, 0),
         new Date(2021, 8, 17, 0, 0, 0, 0),
