--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="apple-mobile-wep-app-capable" content="yes">
   <title>Calendrier Scolaire</title>
   <style>
     html, body {
@@ -55,7 +56,7 @@
   </style>
 </head>
 <body>
-  <div class="version">v0.3</div>
+  <div class="version">v0.4</div>
   <div class="left-column">
     <div id="date_day"></div>
     <div id="date_month"></div>
