--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         return numOfSchoolDays;
       }
 
-      var currentDate = new Date(2022, 1, 21);
+      var currentDate = new Date();
 
       dayNode.textContent = currentDate.getDate();
       monthNode.textContent = ['Janvier', 'Février', 'Mars', 'Avril', 'Mai', 'Juin', 'Juillet', 'Août', 'Septembre', 'Octobre', 'Novembre', 'Décembre'][currentDate.getMonth()];
